--- a/css/dropdowns.css
+++ b/css/dropdowns.css
@@ -56,9 +56,11 @@ input[type="number"] {
 }
 
 .btn-blue {
-    background-color : rgb(33, 28, 83);
+    background-color : rgb(45, 32, 188);
     color : white;
     border : 1px solid black;
+    width: 150px;
+    height: 150px;
 }
 
 .btn-blue:hover, .btn-blue:focus, .bttn-blue:active {
@@ -78,6 +80,10 @@ input[type="number"] {
 }
 
 /* rows */
+.left-level {
+    display: flex;
+}
+
 .dropdown-multicol{
     min-width: 24em;
 }
@@ -93,7 +99,7 @@ input[type="number"] {
 }
 
 .dropdown-menu {         
-    max-height: 25em;
+    max-height: 50em;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -128,7 +134,7 @@ input[type="number"] {
 /* Champions and Items */
 .champ-name {
     word-wrap: normal;
-    font-size: 0.85em;
+    font-size: 2em;
 }
 
 .image-holder {
@@ -168,7 +174,7 @@ input[type="number"] {
 }
 
 .show-border {
-    border: 0px solid white;
+    border: 5px solid white;
 }
 
 .item {
@@ -232,15 +238,15 @@ input[type="number"] {
 .health-box {
     /*background-color: lightgray;*/
     position: relative;
-    background-color: black;
-    width: 100%;
-    height: 1.5em;
+    /* background-color: black; */
+    width: 90%;
+    height: 2em;
     margin-top: 1em;
-    border: 1px solid black;
+    border: 0px solid rgb(0, 255, 162);
 }
 
 .health-bar {
-    background-color: rgb(51, 139, 32);
+    background-color: rgb(82, 191, 58);
     width: 100%;
     height: 100%;
     position: relative;
@@ -255,24 +261,24 @@ input[type="number"] {
     overflow-y: hidden;
 }
 
-.health-text {
+/* .health-text {
     position: absolute;
-    /*bottom: 1.65em;*/
-    top: 0;
-    font-size: 0.8em;
+    bottom: 1.65em;
+    top: calc(100%/2);    
+    left: calc((100%/2));
+    font-size: 1em;
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-}
+    height: 100%;    
+} */
 
 .resource-box {
     position: relative;
-    background-color: black;
-    width: 100%;
-    height: 1.5em;
+    background-color: rgb(0, 101, 252);
+    width: 80%;
+    height: 1em;
     margin-top: 0.25em;
     margin-bottom: 1em;
-    border: 1px solid black;
+    border: 0px solid rgb(1, 173, 253);
 }
 
 .resource-bar {
@@ -283,7 +289,7 @@ input[type="number"] {
 }
 
 .resourceless {
-    background-color: black;
+    background-color: rgb(0, 101, 252);
 }
 
 .energy-based {
