--- a/css/dropdowns.css
+++ b/css/dropdowns.css
@@ -1,20 +1,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-html {
-    height: 100%;
-    box-sizing: border-box;
-}
-
-body {
-    
-    position: relative;
-    margin: 0;
-    padding-bottom: 10rem;
-    min-height: 100%;
-    overflow-y: scroll;
-    overflow-x: scroll;
-}
 
 .navbar {
     padding: 15px 200px;
@@ -58,12 +44,12 @@ input[type="number"] {
 .btn-blue {
     background-color : rgb(45, 32, 188);
     color : white;
-    border : 1px solid black;
-    width: 150px;
-    height: 150px;
+    border : 0px solid black;
+    width: 160px;
+    height: 160px;
 }
 
-.btn-blue:hover, .btn-blue:focus, .bttn-blue:active {
+.btn-blue:hover, .btn-blue:focus, .btn-blue:active {
     color : white;
     background-color : rgb(26, 21, 62);
 }
