--- a/css/main.css
+++ b/css/main.css
@@ -37,15 +37,38 @@ body { word-break:keep-all ; font-family: 'Noto Sans KR', sans-serif; font-size:
 #header .inner { padding: 20px; display: flex; align-items: center;}
 #header .inner h1 { padding: 0px 50px 0px 0px;}
 #header .gnb { display: flex; gap: 30px; }
-#header .gnb a { color: rgb(255, 255, 255); }
+#header .gnb a { color: rgb(255, 255, 255); text-decoration: none; }
 #header .util { display: flex; margin: 0 0 0 auto; gap: 30px;}
 #header .util button { padding: 5px ; height: 30px ; background: #fff; font-size: 15px; font-weight: 700; }
 
 #main #sectionB { position: relative; }
 #main #sectionB .video { width: 100%;}
 
-#main #sectionF { position: absolute; top: 200px; width: 100%; display: flex; justify-content: center; }
-#main #sectionF #dealmeterL { padding: 20px; width:calc(100%/3); height: 700px; background: #ffffff;}
+#main #sectionF { position: absolute; top: 200px; width: 100%; height: 700px; display: flex; justify-content: center; }
+#main #sectionF #dealmeterL { padding-left: 15px; width:calc(100%/3); background: #ffffff;}
+
+.share_ul { padding-right: 50px;}
+.share_Btn { width: 50px; height: 30px; background: #bbff00; color: #000000; font-size: small;}
+.txt_player { margin-left: 4px; border: 1px; width: 160px; height: 30px; background: #598EFF; text-align: center;}
+
+#main #sectionF #dealmeterL .saveItemBtn { margin-top: 4px ; width: 50px; height: 50px; background: #598EFF; text-align: center; }
+#main #sectionF #dealmeterL .saveItemBtn:hover { background: #0d34b4; color: #fff;}
+
+.dealmeterLL { width: 50%; }
+.ds_flex { display: flex; gap: 5px;}
+
+.LV_Show { width : 50px; height: 50px; background: turquoise; }
+.LV_Button { width : 30px; height: 50px; background: turquoise; }
+.BA_button { width: 128px; height: 50px; background: #598EFF; color: #fff;}
+
+#main #sectionF #dealmeterL .skill_Btn { width: 50px; height: 50px; background: #598EFF;}
+#main #sectionF #dealmeterL .skill_Lv_Btn { margin-top: 5px; width: 25%; height: 20px; background: #598EFF; color: #fff;}
+#main #sectionF #dealmeterL #LV_Num { margin-top: 5px; border: 1px solid #000; width: 20px; height: 20px; }
+#main #sectionF #dealmeterL .dropdown-toggle-up { position: relative; }
+#main #sectionF #dealmeterL .dropdown-toggle::after { position: absolute; transform: rotate(180deg); }
+
+
+
 
 #main #sectionF #dealmeterR { padding: 20px; width:calc(100%/3); height: 700px; background: #ffffff;}
 
