--- a/css/dropdowns-origin.css
+++ b/css/dropdowns-origin.css
@@ -1,12 +1,19 @@
-@charset "utf-8";
-@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text&family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800;900&display=swap');
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
 
+body {
+    position: relative;
+    margin: 0;
+    padding-bottom: 10rem;
+    min-height: 100%;
+    overflow-y: scroll;
+    overflow-x: scroll;
+}
 
 .navbar {
-    padding: 15px 200px;
-    border-bottom: 1px solid rgb(0, 0, 0);
-    background-color: #598EFF;
-    font-weight:700;
+    border-bottom: 1px solid black;
 }
 
 .footer {
@@ -16,7 +23,7 @@
     bottom: 0;
     width: 100%;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: white;
     font-size: 0.8em;
 }
 
@@ -38,18 +45,16 @@ input[type="number"] {
  
 /* Background */
 .background {
-    background-color: rgb(255, 255, 255)
+    background-color: rgb(5, 37, 75)
 }
 
 .btn-blue {
-    background-color : rgb(45, 32, 188);
+    background-color : rgb(33, 28, 83);
     color : white;
-    border : 0px solid black;
-    width: 160px;
-    height: 160px;
+    border : 1px solid black;
 }
 
-.btn-blue:hover, .btn-blue:focus, .btn-blue:active {
+.btn-blue:hover, .btn-blue:focus, .bttn-blue:active {
     color : white;
     background-color : rgb(26, 21, 62);
 }
@@ -66,10 +71,6 @@ input[type="number"] {
 }
 
 /* rows */
-.left-level {
-    display: flex;
-}
-
 .dropdown-multicol{
     min-width: 24em;
 }
@@ -85,7 +86,7 @@ input[type="number"] {
 }
 
 .dropdown-menu {         
-    max-height: 50em;
+    max-height: 25em;
     overflow-y: scroll;
     overflow-x: hidden;
 }
@@ -120,7 +121,7 @@ input[type="number"] {
 /* Champions and Items */
 .champ-name {
     word-wrap: normal;
-    font-size: 2em;
+    font-size: 0.85em;
 }
 
 .image-holder {
@@ -160,7 +161,7 @@ input[type="number"] {
 }
 
 .show-border {
-    border: 5px solid white;
+    border: 0px solid white;
 }
 
 .item {
@@ -221,7 +222,22 @@ input[type="number"] {
 
 /* Stats */
 
+.health-box {
+    /*background-color: lightgray;*/
+    position: relative;
+    background-color: black;
+    width: 100%;
+    height: 1.5em;
+    margin-top: 1em;
+    border: 1px solid black;
+}
 
+.health-bar {
+    background-color: rgb(51, 139, 32);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
 
 .cooldown {
     position: absolute;
@@ -234,15 +250,34 @@ input[type="number"] {
 
 .health-text {
     position: absolute;
-    bottom: 1.65em;
-    top: calc(100%/2);    
-    left: calc((100%/2));
-    font-size: 1em;
+    /*bottom: 1.65em;*/
+    top: 0;
+    font-size: 0.8em;
     width: 100%;
-    height: 100%;    
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
+.resource-box {
+    position: relative;
+    background-color: black;
+    width: 100%;
+    height: 1.5em;
+    margin-top: 0.25em;
+    margin-bottom: 1em;
+    border: 1px solid black;
+}
 
+.resource-bar {
+    background-color: rgb(23, 121, 234);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.resourceless {
+    background-color: black;
+}
 
 .energy-based {
     background-color: yellow;
