--- a/css/dropdowns.css
+++ b/css/dropdowns.css
@@ -95,6 +95,37 @@ input[type="number"] {
     overflow-y: scroll;
     overflow-x: hidden;
 }
+/* 임시 */
+.champion-box {
+    max-height: 50em;
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
+
+.champion-img {
+    width:100%;
+    /* height: 30px;
+    margin-right: 10px; */
+}
+
+#champion-search {
+    font-size: 16px;
+}
+
+#champion-list {
+    width: 500px;
+    display: flex;
+    flex-wrap: wrap; 
+    justify-self: flex-start;  
+    align-items: baseline;
+    gap: 4px;
+    font-size: 16px;
+    text-align: center;
+}
+/* 임시 끝 */
+
+
+
 
 .dropdown-item {
     word-wrap: break-word;
