--- a/css/dropdowns.css
+++ b/css/dropdowns.css
@@ -44,7 +44,7 @@ input[type="number"] {
 .btn-blue {
     background-color : rgb(45, 32, 188);
     color : white;
-    border : 0px solid black;
+    /* border : 1px solid black; */
     width: 160px;
     height: 160px;
 
@@ -59,7 +59,7 @@ input[type="number"] {
 .btn-red {
     background-color : rgb(255, 56, 56);
     color : white;
-    border : 0px solid black;
+    /* border : 0px solid black; */
     width: 160px;
     height: 160px;
 }
