--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ html {
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    /* box-sizing: border-box */
 }
 
 table {
@@ -286,6 +286,10 @@ body {
     }
 }
 
+.ul_top {
+    margin-bottom :0;
+}
+
 .ul_main_L {
     padding: 0 30px 0 0;
 }
@@ -318,7 +322,7 @@ body {
 .resource-box {
     position: relative;
     /*background-color: rgb(0, 101, 252);*/
-    width: 473px;
+    width: 423px;
     height: 1em;
     margin-top: 0.25em;
     margin-bottom: 1em;
@@ -327,9 +331,28 @@ body {
 
 .resource-bar {
     background-color: rgb(23, 121, 234);
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     position: relative;
+}
+
+.resource-box-R {
+    position: relative;
+    /*background-color: rgb(0, 101, 252);*/
+    width: 423px;
+    height: 1em;
+    margin-top: 0.25em;
+    margin-bottom: 1em;
+    margin-right: 0;
+    border: 0px solid rgb(1, 173, 253);
+}
+
+.resource-bar-R {
+    background-color: rgb(23, 121, 234);
+    /* width: 100%; */
+    height: 100%;
+    position: relative;
+    margin-right: 0;
 }
 
 /*.resourceless {*/
@@ -347,14 +370,18 @@ body {
 .share_Btn {
     width: 50px;
     height: 50px;
-    background: #bbff00;
-    color: #000000;
+    padding-top: 5px;
+    background: #ff00bf;
+    color: #ffd4f6;
     font-size: small;
+}
+.share_Btn:hover {
+    background: #ffd4f6;
+    color: #ff00bf;
 }
 
 /* 플레이어표시 */
 .txt_player {
-    margin-left: 2px;
     border: 1px;
     width: 160px;
     height: 50px;
@@ -425,6 +452,9 @@ body {
     background-color: #3967ff;
     text-align: center;
     color: #FFF;
+}
+.cri_check span{
+    font-size: 12px;        
 }
 
 /* 스킬창 */
@@ -532,7 +562,7 @@ body {
 /* 오른쪽 딜미터기 */
 
 #main #sectionF #dealmeterR {
-    padding: 10px 0 0 50px;
+    padding: 0.625rem 3.125rem 0 0;    
     width: calc(100%/2);
     background: rgba(255, 255, 255, .8);
     border-right: 1px solid;
@@ -547,6 +577,7 @@ body {
 
 .ds_flex_R {
     flex-direction: row-reverse;
+    margin-right: 0;
 }
 
 .right_panel_ul_main_L {
@@ -558,7 +589,6 @@ body {
 }
 
 .txt_cpu {
-    margin-left: 2px;
     border: 1px;
     width: 160px;
     height: 50px;
